TODO: 
 * Process times and similar ?
 * Fix configuration GUI (low priority)
 * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 * Improved socket performance (would be nice if we could be used as a "hub")

2008-09-24 MickeM - 0.3.5
 * Fixed issue with CheckServiceState and CheckAll (it now works)
 + Added new check: CheckFile2 which has the same syntax as the event log filtering.
    Usage: CheckFile2 file=c:\test\*.txt filter=in filter+creation=<24h "syntax=%filename% was created %creation%" MinWarn=0 MinCrit=0

2008-09-18 MickeM - 0.3.4
 * Changed so "missing services" are treated as stopped.
    CheckServiceState missing=stopped ShowAll
	OK: missing: not found
 * Fixed issue with : in service name.
 + Added some "reasonable default cheks" under [External Alias] for the CheckExternalScripts.dll module. 

2008-09-17 MickeM - 0.3.4 RC-6
 * Added option [EventLog] lookup_names=0 to disable the evetlog name lookup (default is on)

2008-09-17 MickeM
 * Fixed issue on all filters so == takes the "usual" 2 equalsigns (old still works).
 * Added so tray icon can get "propper" name from core for "description".
 * Added lookup of "long" eventlog names (you can now use the alias used in the event viewer)

2008-09-16 MickeM - 0.3.4 RC-5
 * Fixed an issue with the session launcher

2008-09-15 MickeM
 * Fixed so NSCLient++ can load with "broken plugins" (before it printed an error and exited)
 + Added a very basic simple .net plugin (and a wrapper)

2008-09-14 MickeM - 0.3.4 RC-4
 * Fixed an issue with the session launcher
 * Fixed an issue with the uninstaller (should not "fail" when problems uninstalling)

2008-09-14 MickeM - 0.3.4 RC-4
 * Fixed issue with OS detection (again)
 * Fixed issue with plugin unloading (again)
 * Fixed issue with SSL socket not unloading properly
 * Fixed issue with "login" and "no session" (should work now I hope) (#222)