@@ -2,9 +2,9 @@
 #define AUTOBUILD_H
 // change the FALSE to TRUE for autoincrement of build number
 #define INCREMENT_VERSION TRUE
-#define FILEVER        0,3,5,2
-#define PRODUCTVER     0,3,5,2
-#define STRFILEVER     _T("0.3.5.2")
-#define STRPRODUCTVER  _T("0.3.5.2")
-#define STRPRODUCTDATE  _T("2008-09-24")
+#define FILEVER        0,3,6,6
+#define PRODUCTVER     0,3,6,6
+#define STRFILEVER     _T("0.3.6.6")
+#define STRPRODUCTVER  _T("0.3.6.6")
+#define STRPRODUCTDATE  _T("2008-09-25")
 #endif // AUTOBUILD_H
