@@ -220,6 +220,18 @@ Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = ".NET", ".NET", "{BBE9A5E7-A
 		Release.AspNetCompiler.Debug = "False"
 	EndProjectSection
 EndProject
+Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "custom-installers", "custom-installers", "{FC917E21-188A-44EE-9EF2-7C1274C2D719}"
+	ProjectSection(WebsiteProperties) = preProject
+		Debug.AspNetCompiler.Debug = "True"
+		Release.AspNetCompiler.Debug = "False"
+	EndProjectSection
+EndProject
+Project("{A49CE20D-CE64-4A08-9F24-92A6443D6699}") = "installer", "..\..\..\..\..\..\source\NSCP-stable\helpers\op5-installer\installer.wixproj", "{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}"
+	ProjectSection(WebsiteProperties) = preProject
+		Debug.AspNetCompiler.Debug = "True"
+		Release.AspNetCompiler.Debug = "False"
+	EndProjectSection
+EndProject
 Global
 	GlobalSection(SubversionScc) = preSolution
 		Svn-Managed = True
@@ -1029,7 +1041,6 @@ Global
 		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|Mixed Platforms.ActiveCfg = Release|Win32
 		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|Mixed Platforms.Build.0 = Release|Win32
 		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|Win32.ActiveCfg = Release|Win32
-		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|Win32.Build.0 = Release|Win32
 		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|x64.ActiveCfg = Release|x64
 		{6206F046-3D36-4258-BB03-3291A7070117}.Nightly|x64.Build.0 = Release|x64
 		{6206F046-3D36-4258-BB03-3291A7070117}.Release|Any CPU.ActiveCfg = Release|Win32
@@ -1065,7 +1076,6 @@ Global
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|Mixed Platforms.ActiveCfg = Release|x64
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|Mixed Platforms.Build.0 = Release|x64
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|Win32.ActiveCfg = Nightly|Win32
-		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|Win32.Build.0 = Nightly|Win32
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|x64.ActiveCfg = Nightly|x64
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Nightly|x64.Build.0 = Nightly|x64
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB}.Release|Any CPU.ActiveCfg = Release|x64
@@ -1253,6 +1263,56 @@ Global
 		{D367E76D-9485-4DCB-A9D0-3D3C0E190648}.Release|Win32.ActiveCfg = Release|Win32
 		{D367E76D-9485-4DCB-A9D0-3D3C0E190648}.Release|Win32.Build.0 = Release|Win32
 		{D367E76D-9485-4DCB-A9D0-3D3C0E190648}.Release|x64.ActiveCfg = Release|Win32
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Any CPU.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Any CPU.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Itanium.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Itanium.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Mixed Platforms.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Mixed Platforms.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Win32.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|Win32.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|x64.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug|x64.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Any CPU.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Any CPU.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Itanium.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Itanium.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Mixed Platforms.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Mixed Platforms.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Win32.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|Win32.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|x64.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Debug-MemCheck|x64.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Any CPU.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Any CPU.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Itanium.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Itanium.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Mixed Platforms.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Mixed Platforms.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Win32.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|Win32.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|x64.ActiveCfg = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Distribution|x64.Build.0 = Debug
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Any CPU.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Any CPU.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Itanium.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Itanium.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Mixed Platforms.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Mixed Platforms.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Win32.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|Win32.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|x64.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Nightly|x64.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Any CPU.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Any CPU.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Itanium.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Itanium.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Mixed Platforms.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Mixed Platforms.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Win32.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|Win32.Build.0 = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|x64.ActiveCfg = Release
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED}.Release|x64.Build.0 = Release
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -1278,12 +1338,14 @@ Global
 		{6206F046-3D36-4258-BB03-3291A7070117} = {9A087442-7BB2-4CF0-9F58-5D1BC3C32CD2}
 		{D96F7075-F6CD-4921-B5D8-8488E2D24BDB} = {9A087442-7BB2-4CF0-9F58-5D1BC3C32CD2}
 		{BBE9A5E7-A16B-443C-A349-823DED5A9FF3} = {9A087442-7BB2-4CF0-9F58-5D1BC3C32CD2}
+		{FC917E21-188A-44EE-9EF2-7C1274C2D719} = {9A087442-7BB2-4CF0-9F58-5D1BC3C32CD2}
 		{630857C0-6AD8-4CEE-B5F7-CA1DF620CA9A} = {C8DCE3D7-A802-4C5D-ABB1-B478F545B6E5}
 		{B6D08289-B8AE-4391-9D07-93B22618BE58} = {C8DCE3D7-A802-4C5D-ABB1-B478F545B6E5}
 		{45D4AD47-393C-4E67-9B68-FCA621CD3120} = {C8DCE3D7-A802-4C5D-ABB1-B478F545B6E5}
 		{19BF0AD8-0013-46C7-9E91-F60FE3B0A63D} = {45D4AD47-393C-4E67-9B68-FCA621CD3120}
 		{D367E76D-9485-4DCB-A9D0-3D3C0E190648} = {BBE9A5E7-A16B-443C-A349-823DED5A9FF3}
 		{1D9DEE38-BBDC-49DE-A6F3-BAC26E114C1D} = {BBE9A5E7-A16B-443C-A349-823DED5A9FF3}
+		{10A0052D-542B-47AD-85C3-1A3DD45BF2ED} = {FC917E21-188A-44EE-9EF2-7C1274C2D719}
 	EndGlobalSection
 	GlobalSection(DPCodeReviewSolutionGUID) = preSolution
 		DPCodeReviewSolutionGUID = {00000000-0000-0000-0000-000000000000}
